fixes spelling errors and spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,6 @@ nav a {
 
 article {
   margin-top: 5%;
-  padding-bottom: 5%;
 }
 
 article h1 {
@@ -63,6 +62,7 @@ article h1 {
 article p {
   font-family: 'Arial';
   font-size: 1.5em;
+  margin-bottom: 3%;
 }
 
 article img {
